Closed Bug 734910 Opened 13 years ago Closed 13 years ago

Enter the compartment of the new global before calling FinishInitForNewWrappedGlobal

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: bholley, Assigned: bholley)

References

Details

Attachments

(1 file)

This is a simple regression from bug 733606 that caused tests to go orange with cpg. Patch coming right up.
Attaching a patch, flagging mrbkap. Sorry for the churn blake. :-(
Attachment #604988 - Flags: review?(mrbkap)
Attachment #604988 - Flags: review?(mrbkap) → review+
Pushed to try, along with some other patches: https://tbpl.mozilla.org/?tree=Try&rev=4d9ad69264c3
Target Milestone: --- → mozilla14
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: