Bug 734910 - Enter the compartment of the new global before calling FinishInitForNewWrappedGlobal. r=mrbkap